Fix ">read more"

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ tags: [Hossain, Mohd, Faysal, electrical, engineering, blog, university, pennsyl
 		                    <i class="icon-link"></i> read more...
 		                </a>
 		                {% else %}
-		                <a href="{{ site.url }}{{ post.url }}" data-toggle="tooltip" title="Read more about {{ post.title }}" class="more-link">>
+		                <a href="{{ site.url }}{{ post.url }}" data-toggle="tooltip" title="Read more about {{ post.title }}" class="more-link">
 		                    <i class="icon-link"></i> read more...
 		                </a>
 		                {% endif %}
